--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -23,8 +23,8 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "api/restaurants",
-      "applicationUrl": "https://localhost:7281;http://localhost:5112",
+      "launchUrl": "api/RestaurantWithLocation",
+      "applicationUrl": "http://localhost:5112;https://localhost:7281",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
