seeding test data and resolve minor refactoring

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=TARUNGUPTA1\\MSSQLSERVER14;Database=RestaurantDb;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=TARUNGUPTA1\\MSSQLSERVER14;Database=RestaurantDbTest;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Jwt": {
     "Key": "YourSuperSecretKey123!ChangeThis",
